force-app/main/default/objects/Form_Table__mdt/Form_Table__mdt.object-meta.xml
<CustomObject>
    <description>The form table metadata will hold the information about the form table which will be utilized in the flow or any other form.</description>
    <label>Form Table</label>
    <pluralLabel>Form Tables</pluralLabel>
</CustomObject>