force-app/main/default/objects/Form_Table__mdt/fields/Column_1__c.field-meta.xml
<CustomField>
    <fullName>Column_1__c</fullName>
    <label>Column 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>