force-app/main/default/objects/Form_Table__mdt/fields/Column_2__c.field-meta.xml
<CustomField>
    <fullName>Column_2__c</fullName>
    <label>Column 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>