force-app/main/default/objects/Form_Table__mdt/fields/Column_3__c.field-meta.xml
<CustomField>
    <fullName>Column_3__c</fullName>
    <label>Column 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>