force-app/main/default/objects/Form_Table__mdt/fields/Column__c.field-meta.xml
<CustomField>
    <fullName>Column__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Column detail of the table, how many columns we needed for the table.</description>
    <label>Column</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>