force-app/main/default/objects/Form_Table__mdt/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <description>Give the formula as it required to identify in the formula calculation.</description>
    <inlineHelpText>Give the formula as it required to identify in the formula calculation.
make sure it follows the correct formula see in below example.
Ex: column5 + column3 - column4</inlineHelpText>
    <label>Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>