force-app/main/default/objects/Form_Table__mdt/fields/Formula_Column_Name__c.field-meta.xml
<CustomField>
    <fullName>Formula_Column_Name__c</fullName>
    <description>Give the comma-separated formula column name as it required to identify in the formula calculation.</description>
    <inlineHelpText>Give the comma-separated formula column name as it required to identify in the formula calculation.
make sure it follows the below example name.
Ex: column5,column3,column4</inlineHelpText>
    <label>Formula Column Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>