force-app/main/default/objects/Form_Table__mdt/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <description>Group Name is used to use in the related records to fetch all the records related to this form table.</description>
    <inlineHelpText>Enter the form table name.</inlineHelpText>
    <label>Group Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>